[fix]: Alterando cor de contraste

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 /* Variables */
 :root{
-    --main-color: #54b689;
+    --main-color: #8c9294;
     --main-text-color: #fff;
     --border-color: #999;
     --bio-bg-color: #1e2a3a;
